tui/src/views/snapshots/toon_console_tui__views__workloads__tests__snapshot_no_ssh.snap
---
source: src/views/workloads.rs
expression: render(&state)
---
┌ Workloads────────────────────────────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────────────┐
│  ID            LISTING    STATUS      RUNWAY      SB   GW        ││a1e292ee009eb3fc064aaa7a1bc70a28adc1039f495751d4caa0cb9c08fd8ab0                │
│> a1e292ee009e… basic v1   running     3 d 0 h          ✓         ││Listing basic v1  Provider g.toon.provider                                      │
│                                                                  ││Runway 3 d 0 h                                                                  │
│                                                                  ││                                                                                │
│                                                                  ││Leases (primary first)                                                          │
│                                                                  ││  standalone running          basic v1  running now                             │
│                                                                  ││                                                                                │
│                                                                  ││Access                                                                          │
│                                                                  ││  Host 203.0.113.7                                                              │
│                                                                  ││  SSH not offered — this workload was spawned with no key.                      │
│                                                                  ││  web  http://203.0.113.7:30080                                                 │
│                                                                  ││                                                                                │
│                                                                  ││Most recent takeover                                                            │
│                                                                  ││  No Takeover has happened for this workload.                                   │
│                                                                  ││                                                                                │
│                                                                  ││Auto-extend                                                                     │
│                                                                  ││  No budget set. Press `a` to set one.                                          │
│                                                                  ││                                                                                │
│                                                                  ││Gateway                                                                         │
│                                                                  ││  uhrjf3qat2z7ybskvj5bxrykfcw4ca47jflvdvgkudfzych5rkya.gw.devnet.toonprotocol.de│
│                                                                  ││v — reading…                                                                    │
│                                                                  ││                                                                                │
│                                                                  ││Continuation Token                                                              │
│                                                                  ││  Reading…                                                                      │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
└──────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
