tui/src/views/snapshots/toon_console_tui__views__workloads__tests__snapshot_rotation_done.snap
---
source: src/views/workloads.rs
expression: render(&state)
---
┌ Workloads────────────────────────────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────────────┐
│  ID            LISTING    STATUS         RUNWAY      SB   GW     ││aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                │
│> aaaaaaaaaaaa… basic v1   running        3 d 0 h          ✓      ││Listing basic v1  Provider g.toon.provider                                      │
│                                                                  ││Runway 3 d 0 h                                                                  │
│                                                                  ││                                                                                │
│                                                                  ││Leases (primary first)                                                          │
│                                                                  ││  standalone running          basic v1  running now                             │
│                                                                  ││                                                                                │
│                                                                  ││Access                                                                          │
│                                                                  ││  Host 203.0.113.7                                                              │
│                                                                  ││  SSH  ssh -p 40000 tenant@203.0.113.7                                          │
│                                                                  ││                                                                                │
│                                                                  ││Most recent takeover                                                            │
│                                                                  ││  No Takeover has happened for this workload.                                   │
│                                                                  ││                                                                                │
│                                                                  ││Auto-extend                                                                     │
│                                                                  ││  No budget set. Press `a` to set one.                                          │
│                                                                  ││                                                                                │
│                                                                  ││Gateway                                                                         │
│                                                                  ││  vkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkvkva.gw.devnet.toonprotocol.de│
│                                                                  ││v — reading…                                                                    │
│                                                                  ││                                                                                │
│                                                                  ││Continuation Token                                                              │
│                                                                  ││  Rotated 2026-09-24T00:00:00.000Z.                                             │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
│                                                                  ││                                                                                │
└──────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
